--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         </navbar-header>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#">首页<span class="sr-only">(current)</span></a></li>
-                <li><a href="#">示例1</a></li>
+                <li class="active"><a href="#home">首页<span class="sr-only">(current)</span></a></li>
+                <li><a href="#detail">示例1</a></li>
             </ul>
             <form class="navbar-form navbar-right" role="search">
                 <div class="form-group">
@@ -25,6 +25,31 @@
                 <button class="btn btn-default" type="submit">搜索</button>
             </form>
         </div>
+    </div>
+</div>
+
+<div class="container">
+    <div class="row">
+        <div class="tabsexample col-md-6">
+            <ul class="nav nav-tabs" id="myTab">
+                <li class="active"><a href="#home" data-toggle="tab">首页</a></li>
+                <li><a href="#detail" data-toggle="tab">示例1</a></li>
+            </ul>
+
+            <div class="tab-content">
+                <div class="tab-pane active" id="home">
+                    Home
+                </div>
+                <div class="tab-pane" id="detail">
+                    detail
+                </div>
+            </div>
+        </div>
+
+        <div class="txtExamples col-md-6">
+            <h1>h1. Bootstrap Headings <small>secondary text</small></h1>
+        </div>
+
     </div>
 </div>
 
